# indi-sigma

./: CMakeLists.txt  README.md  indi_sigma.xml  sigma_backend.cpp  sigma_backend.h  sigma_ccd.cpp  sigma_ccd.h
.github/workflow/: packages.yml
.github/workflows/: packages.yml
debian/: changelog  control  rules
rpm/: indi-sigma.spec
